# https://pypi.org/project/setupcfg-generator/
[metadata]
name = markdown-link-extractor
version = 2019.3.23
url = https://github.com/looking-for-a-job/markdown-link-extractor.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = markdown

[options]
install_requires = 
	Markdown
	click
	public
	setuptools
packages = 
	markdown_link_extractor
